Apply patch for Bug#27806 table comments not passed in to storage engine during "CREATE ... LIKE ..." Only affects engine writers. No change in server behaviour.